--- a/my-app/src/app.css
+++ b/my-app/src/app.css
@@ -80,6 +80,14 @@ button:focus-visible {
   }
 }
 
-.tabuleiro td {
-  padding: 25px 25px;
+.tabuleiro td{
+  padding: 35px 35px;
 }
+
+.pecas td{
+  padding: 35px 30px 35px 35px;
+  border-radius: 100%;
+}
+
+
+
